# l1br

./: CMakeLists.txt  package.xml  robozinho.urdf.xacro
config/: rocket_control.yaml  rviz_config.rviz
launch/: rocket.launch.py  spawn.launch.xml  start_world.launch.py  teleop.launch.py
meshes/: M_rodatrativa.dae
models/a_mesa/: a_mesa.dae  model.config  model.sdf
models/mesa_de_canto/: mesa_de_canto.dae  model.config  model.sdf
models/mesa_do_meio/: mesa_do_meio.dae  model.config  model.sdf
models/mesa_normal/: mesa_normal.dae  model.config  model.sdf
models/rocket/: model.config  rocket.sdf
models/shelf/: model.sdf
urdf/: l1br.urdf.xacro  l1br_control.xacro  robozinho.urdf  robozinho.urdf.xacro  rocket.urdf.xacro  rocket_control.xacro
urdf/robot_parts/: caster_wheel.xacro  piston.xacro  robot_base.xacro  traction_wheel.xacro  tray.xacro
urdf/sensors/: laser_sensor.urdf.xacro
